# chatkit-ui

./: .gitignore  .prettierignore  AGENTS.md  PLANS.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: brief.md  tasks.md
tools/dev-server/: main.py  memory_store.py  pyproject.toml  server_impl.py
tools/playground/: index.html  package.json  vite.config.ts
tools/playground/src/: App.tsx  styles.css
